# mbed-os-experimental-ble-services

./: .gitignore  .mbedignore  CMakeLists.txt  CMakeLists.txt.in  README.md  activate.sh  bootstrap.sh  init.sh  symlink.sh
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  service-proposal.md
.github/workflows/: build_integration_tests.yml  main.yml  run_integration_tests.yml  run_tests.yml  run_unit_tests.yml
common/inc/: BaseService.h  ConnectionThingy.h  GattPresentationFormatDescriptor.h
descriptors/: CharacteristicPresentationFormatDescriptor.h  CharacteristicUserDescriptionDescriptor.h  GattPresentationFormatDescriptor.h
doc/: CONTRIBUTING.md  DEVELOPMENT.md
doc/adr/: 0001-record-architecture-decisions.md  0002-define-initial-testing-infrastructure.md  0003-directory-structure.md
include/mbed-ble-services/: dummy_service.h
scripts/: activate.sh  bootstrap.sh
services/CurrentTime/: CMakeLists.txt  mbed_lib.json
services/CurrentTime/include/ble-service-current-time/: CurrentTimeService.h
services/CurrentTime/source/: CurrentTimeService.cpp
services/DFU/include/ble-service-dfu/: DFUService.h
services/DeviceInformation/: CMakeLists.txt  mbed_lib.json
services/DeviceInformation/include/ble-service-device-information/: DeviceInformationService.h
services/DeviceInformation/source/: DeviceInformationService.cpp
services/FOTA/: CMakeLists.txt  mbed_lib.json
services/FOTA/docs/: README.md
services/FOTA/docs/latex/: .gitignore  README.md  README.md~  fota-bsc-packet.tex  fota-control-packet.tex  fota-fc-packet.tex  fota-status-packet.tex  fota-sync-lost-packet.tex
services/FOTA/docs/plantuml/: fota-deferred-validation.puml  fota-delayed-start.puml  fota-false-start.puml  fota-flow-control.puml  fota-flow-ignore.puml  fota-immediate-start.puml  fota-immediate-validation.puml  fota-service.puml  fota-service.puml~  fota-session-normal-start.puml  fota-session-rollover.puml  fota-start-not-ready.puml  fota-sync-lost.puml
services/FOTA/include/ble-service-fota/: FOTAService.h
services/FOTA/source/: FOTAService.cpp
services/LinkLoss/: CMakeLists.txt  mbed_lib.json
services/LinkLoss/include/ble-service-link-loss/: LinkLossService.h
services/LinkLoss/plantuml/: README.md
services/LinkLoss/plantuml/source/: disconnection_reconnection.puml  invalid_write_request.puml  normal_connection.puml  normal_disconnection.puml  normal_initialization.puml  normal_write_request.puml
services/LinkLoss/source/: LinkLossService.cpp
services/inc/: DFUService.h
services/src/DFUService/: DFUService.cpp  mbed_lib.json
source/: dummy_service.cpp
tests/: .gitignore  CMakeLists.txt  README.md  googletest.in  tests.sh  unittests.sh
tests/CI/: tests.sh
tests/CI/run-integration-test/: Dockerfile  action.yml
tests/CI/run-unit-test/: Dockerfile  action.yml
tests/TESTS/: README.md  __init__.py  build.sh  conftest.py  pytest.ini  requirements.txt  tests.sh
tests/TESTS/DeviceInformation/device/: .mbedignore  CMakeLists.txt  mbed_app.json
tests/TESTS/DeviceInformation/device/source/: main.cpp
tests/TESTS/DeviceInformation/host/: test_device_information.py
tests/TESTS/FOTA/device/: CMakeLists.txt  FOTA  descriptors  mbed_app.json
tests/TESTS/FOTA/device/source/: main.cpp
tests/TESTS/FOTA/host/: test_data_gen.py  test_fota.py
tests/TESTS/LinkLoss/device/: CMakeLists.txt  LinkLoss  mbed-os
tests/TESTS/LinkLoss/device/services/Disconnection/: CMakeLists.txt  mbed_lib.json
tests/TESTS/LinkLoss/device/source/: DisconnectionService.cpp  DisconnectionService.h  main.cpp
tests/TESTS/LinkLoss/host/: test_link_loss.py  tests.py  utils.py
tests/TESTS/common/: device.py  fixtures.py  serial_connection.py  serial_device.py
tests/UNITTESTS/: .mbedignore  CMakeLists.txt  README.md  build.sh  run.sh  unittests.sh
tests/UNITTESTS/CurrentTime/: CMakeLists.txt  test_CurrentTime.cpp
tests/UNITTESTS/DeviceInformation/: CMakeLists.txt  test_DeviceInformationService.cpp
tests/UNITTESTS/FOTA/: CMakeLists.txt  test_FOTA.cpp
tests/UNITTESTS/LinkLoss/: CMakeLists.txt  test_LinkLoss.cpp  test_LinkLossService.cpp
tests/UNITTESTS/Template/: CMakeLists.txt  test_Template.cpp
tests/mocks/: GattServerMock.cpp  GattServerMock.h
tests/source/: dummy_service_test.cpp
tests/stubs/include/ble/: BLE.h  Gap.h  GattServer.h
tests/stubs/include/ble/common/: Duration.h
tests/stubs/include/ble/gap/: ChainableGapEventHandler.h
tests/stubs/include/ble/gatt/: GattCallbackParamTypes.h  GattCharacteristic.h
tests/stubs/include/platform/: Span.h  mbed_assert.h  mbed_preprocessor.h  mbed_toolchain.h
tests/stubs/source/: BLE.cpp  GattServer.cpp  dummy_stub.cpp
tools/service-generator/: requirements.txt
tools/service-generator/templates/service/: ServiceTemplate.cpp  ServiceTemplate.h  service-definition-template.json
